crates/ditto-checker/tests/golden/type-errors/duplicate_value_declaration.ditto
module Test exports (..);

five = 5;


five = 5;
